alteracoes de telas-exceto alterarSenha

--- a/Tela de alteração de senha.html
+++ b/Tela de alteração de senha.html
@@ -37,7 +37,7 @@
     <br />
     <br />
 
-    <a href="#">
+    <a href="">
         <div class="button" style="width: 200px; height: 80px; text-align: center">
             <p style="color: white; text-decoration: none; text-align: center">Enviar</p>
         </div>
