--- a/Tela do Usuário.html
+++ b/Tela do Usuário.html
@@ -17,7 +17,7 @@
         <a href="#">Ajuda</a>
     </div>
 
-    <div class="fundo">
+    <div class="fundo" style="opacity: 1.0" >
 
         <br />
         <br />
