--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -38,9 +38,9 @@
     <div class="p">
         <p>
             Nós da DP Finaciamentos trazemos em nossa plataforma algo<br />
-            que vai ajudar você, a realizar os seus sonhos.<br />
-            Com a nova tecnologia blockchain seus dados e transações estarão<br />
-            mais seguros do que nunca.<br />
+            que vai ajudar você, a realizar os seus sonhos. Com a nova<br />
+            tecnologia blockchain seus dados e transações estarão mais<br />
+            seguros do que nunca.<br />
             Gostou? Então o que está esperando?<br />
             Dp Financiamentos, venha fazer parte do futuro!<br />
         </p>
