--- a/Tela Financiamento.html
+++ b/Tela Financiamento.html
@@ -9,25 +9,16 @@
 
     <div class="menu">
         <a href="#">Home</a>
-        <a href="Tela acompanhamento.html">Acompanhamento</a>
         <a href="#">Financiamento</a>
+        <a href="#">Acompanhamento</a>
         <a href="#">Simulação</a>
         <a href="#">Ajuda</a>
     </div>
-
-    <label for="txtId">Id</label>
-    <input type="text" id="txtId" name="txtId" placeholder="Aqui aparecerá o valor do financiamento" required />
-    <label for="txtNome">Nome</label>
-    <input type="text" id="txtNome" name="txtNome" placeholder="Aqui aparecerá o nome do cliente que solicitou o boleto" required /><br />
-    <label for="txtCpf">CPF</label>
-    <input type="text" id="txtCpf" name="txtCpf" placeholder="Aqui aparecerá o valor do financiamento" required /><br />
-    <label for="txtEmail">E-mail</label>
-    <input type="email" id="txtEmail" name="txtEmail" placeholder="Aqui aparecerá o número da parcela" required /><br />
-    <label for="dateNascimento">Data de Nascimento</label>
-    <input type="date" id="dateNascimento" name="dateNascimento" placeholder="Aqui aparecerá o número da parcela" required />
     <br />
-    <label for="txtTelefone">Telefone</label>
-    <input type="tel" id="txtTelefone" name="txtTelefone" placeholder="Aqui aparecerá o valor do financiamento" required />
+
+    <h1>Financiamento</h1>
+    <!--ATENÇÃO ESTA TUDO EM TEXTO DEPOIUS PASSAR PARA A MOEDA-->
+
     <label for="txtFinanciamento">Financiamento</label>
     <input type="text" id="txtFinanciamento" name="txtFinanciamento" required /><br />
     <label for="txtParcelas">  Parcelas</label>
@@ -36,9 +27,10 @@
     <label for="dateInicial">  Data Inicial</label>
     <input type="date" id="dateInicial" name="dateInicial" required /><br />
     <label for="dateFinal">  Data Final</label>
-    <input type="date" id="dateFinal" name="dateFinal" required /><br />
-    <label for="txtMoeda">Moeda</label><br />
-    <select id="txtMoeda" name="txtMoeda">
+    <input type="date" id="dateFinal" name="dateFinal" required /><br /><br />
+    <label for="txtMoeda">Moeda</label>
+    <select style="border: 2px solid #ccc;background-color: white;width: 30%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+            id="txtMoeda" name="txtMoeda">
         <option value="txtMoeda">Real</option>
         <option value="txtMoeda">Dólar</option>
         <option value="txtMoeda">Euro</option>
@@ -61,13 +53,11 @@
     <br /><br />
     <label for="txt">Status do financiamento Ex: Pagando</label><br />
     <!--Status do financiamento Ex: Pagando-->
-    <br /><br />
-    <label for="dateSolicitado">Solicitado</label>
-    <input type="date" id="dateSolicitado" name="dateSolicitado" placeholder="Aqui aparecerá a data de solicitação do boleto" required /><br />
-
-
-
-    <a href="tela acompanhamento.html">Exibir Menos</a>
+    <br />
+    <br /> 
+    <br />
+    <br />
+    <br />
 
 
 </body>
