--- a/Tela acompanhamento.html
+++ b/Tela acompanhamento.html
@@ -9,27 +9,39 @@
 
     <div class="menu">
         <a href="#">Home</a>
-        <a href="#">Acompanhamento</a>
-        <a href="#">Financiamento</a>
+        <a href="Tela acompanhamento.html">Financiamento</a>
+        <a href="Tela de exibir mais.html">Acompanhamento</a>
         <a href="#">Simulação</a>
         <a href="#">Ajuda</a>
     </div>
+
+    <h1>Acompanhamento</h1>
+
+    <label for="txtId">Id</label>
+    <input type="text" id="txtId" name="txtId" required />
+    <label for="txtNome">Nome</label>
+    <input type="text" id="txtNome" name="txtNome" required /><br />
+    <label for="txtCpf">CPF</label>
+    <input type="text" id="txtCpf" name="txtCpf" required /><br />
+    <label for="txtEmail">E-mail</label>
+    <input type="email" id="txtEmail" name="txtEmail" required /><br />
+    <label for="dateNascimento">Data de Nascimento</label>
+    <input type="date" id="dateNascimento" name="dateNascimento" required />
     <br />
-
-    <h1>Financiamento</h1>
-    <!--ATENÇÃO ESTA TUDO EM TEXTO DEPOIUS PASSAR PARA A MOEDA-->
-
+    <label for="txtTelefone">Telefone</label>
+    <input type="tel" id="txtTelefone" name="txtTelefone" required />
     <label for="txtFinanciamento">Financiamento</label>
     <input type="text" id="txtFinanciamento" name="txtFinanciamento" required /><br />
-    <label for="txtParcelas">  Parcelas</label>
+    <label for="txtParcelas">Parcelas</label>
     <input type="text" id="txtParcelas" name="txtParcelas" required /><br />
 
-    <label for="dateInicial">  Data Inicial</label>
+    <label for="dateInicial">Data Inicial</label>
     <input type="date" id="dateInicial" name="dateInicial" required /><br />
-    <label for="dateFinal">  Data Final</label>
+    <label for="dateFinal">Data Final</label>
     <input type="date" id="dateFinal" name="dateFinal" required /><br />
     <label for="txtMoeda">Moeda</label><br />
-    <select id="txtMoeda" name="txtMoeda">
+    <select style="border: 2px solid #ccc;background-color: white;width: 30%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+            id="txtMoeda" name="txtMoeda">
         <option value="txtMoeda">Real</option>
         <option value="txtMoeda">Dólar</option>
         <option value="txtMoeda">Euro</option>
@@ -45,7 +57,7 @@
     <label for="txtValorParcela">  Valor da Parcela</label>
     <input type="text" id="txtValorParcela" name="txtValorParcela" required /><br />
     <label for="dateVencimento">Vencimento</label>
-    <input type="date" id="dateVencimento" name="dateVencimento" placeholder="Aqui aparecerá a data de vencimento do boleto" required /><br />
+    <input type="date" id="dateVencimento" name="dateVencimento" required /><br />
     <br /><br />
     <label for="txt">situação do Financiamento Ex: Análise</label><br />
     <!--situação do Financiamento Ex: Análise-->
@@ -54,12 +66,11 @@
     <!--Status do financiamento Ex: Pagando-->
     <br /><br />
     <label for="dateSolicitado">Solicitado</label>
-    <input type="date" id="dateSolicitado" name="dateSolicitado" placeholder="Aqui aparecerá a data de solicitação do boleto" required /><br />
-    <!-- VER DEPOIS COMO LINKAR UMA PÁGINA SEM SAIR DA OUTRA-->
-    <a href="Tela de exibir mais.html" style="color: black">Exibir Mais</a>
-    <br />
-    <br />
-    <br />
+    <input type="date" id="dateSolicitado" name="dateSolicitado" required /><br />
+
+
+
+
 
 
 </body>
