Alteração de Textos e Formatação de parágrafos

--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -37,28 +37,30 @@
     </div>
     <div class="p">
         <p>
-            Nós da DP Finaciamentos trazemos em nossa plataforma algo<br />
-            que vai ajudar você, a realizar os seus sonhos.<br />
-            Com a nova tecnologia blockchain seus dados e transações estarão<br />
-            mais seguros do que nunca.<br />
-            Gostou? Então o que está esperando?<br />
-            Dp Financiamentos, venha fazer parte do futuro!<br />
+            Nós da DP Finaciamentos trazemos em nossa plataforma algo que vai ajudar você,<br />
+            a realizar os seus sonhos. Diferente de tudo que você tenha visto, trazemos conosco<br /> 
+            a nova tecnologia blockchain onde suas transações estarão mais seguras do que nunca.<br /> 
+            Gostou? Então o que está esperando? Dp Financiamentos, venha e seja parte do futuro!<br />
         </p>
     </div>
 
     <div class="j">
-        <h2>Nossa Atuação</h2>
+        <h2>Mas afinal, o que é Blockchain? E como usá-lo?</h2>
     </div>
     <div class="p">
         <p>
-            Atuamos na revisão de juros abusivos, de modo a evitar que nossos<br />
-            clientes paguem juros e multas maiores do que a lei determina, bem como<br />
-            na prevenção da busca e apreensão de veículos, cujos contratos geralmente incluem<br />
-            valores exorbitantes e ilegais. ívida de cartão de crédito e dívidas de empréstimo são<br />
-            outros serviços prestados pela equipe da Novo Ideal Consultoria, que visa proporcionar<br />
-            as melhores condições para a quitação da dívida, com valores que estejam dentro das<br />
-            possibilidades de cada cliente e uma economia considerável graças ao revisional de juros,<br />
-            multas e outras cobranças indevidas.
+            Blockchain é um livro que registra as transações de moedas virtuais em uma rede
+            onde as informações<br /> 
+            são armazenadas em blocos sendo que cada bloco é carimbado com registros de data, 
+            tempo e localização.<br /> 
+            Para usar o blockchain você deve realizar uma transação e adicioná-la ao bloco, 
+            mas a tecnologia<br />
+            é tão segura que a transação solicitada só sera efetuada e concluída se a maioria 
+            dos outros blocos<br /> 
+            definirem que a transação em questão é legítima, sendo assim uma transação de uma 
+            origem desconhecida<br />
+            ou sem sentido é negada juntamemnte com a permissão de acesso das outras informações 
+            contidas no bloco.
         </p>
     </div>
     <br />
@@ -79,12 +81,12 @@
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        Cada revisão de juros abusivos realizada por<br />
-                        nossa equipe é feita com total empenho<br />
-                        e dedicação, sem que nenhuma cláusula ou detalhe<br />
-                        passe despercebido. Assim, os direitos do cliente são<br />
-                        colocados em primeiro lugar, para que eles não<br />
-                        fiquem à mercê de abusos e irregularidades.
+                        Nossa equipe trabalha para dar á você a<br /> 
+                        chance de realizar os seus sonhos, com os<br />
+                        menores juros do mercado, temos o orgulho de<br /> 
+                        mencionar que nós, a equipe da DP Financiamentos<br />  
+                        proporcionamos aos nossos clientes uma oportunidade<br />
+                        única de pertencer ao mundo dos negócios.<br /> 
                     </p>
                 </div>
             </div>
@@ -92,9 +94,10 @@
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        A agilidade é preponderante em todos os<br />
-                        casos, pois quanto antes o cliente tiver<br />
-                        seu problema solucionado, melhor.
+                        Já imaginou se tornando o mais novo<br /> 
+                        milionário? A DP Financiamentos vai<br /> 
+                        te ajudar nessa! Basta se cadastrar e<br />
+                        vir conhecer mais sobre nossa plataforma.<br />
                     </p>
                 </div>
             </div>
@@ -102,10 +105,12 @@
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        O pleno conhecimento do Código de Defesa<br />
-                        do Consumidor e da lei como um todo permite<br />
-                        que toda revisão de juros abusivos ou negociação<br />
-                        de dívida ocorra rapidamente.<br />
+                        Toda tecnologia á sua disposição, transações mais<br />
+                        seguras, sigilo de informações e uma versão do nosso <br />
+                        site para aplicativo Android, assim você poderá ter <br />
+                        acesso e ficar por dentro de tudo que acontece com o seu <br />
+                        dinheiro onde você estiver. Sem falar que nós temos um simulador <br />
+                        para você dar aquela conferida em nossa plataforma bem de perto.<br />
                     </p>
                 </div>
             </div>
