--- a/Tela antecipar boleto.html
+++ b/Tela antecipar boleto.html
@@ -15,19 +15,19 @@
         <a href="#">Ajuda</a>
     </div>
 
-    <h1>Antecipar Boleto</h1>
+    <h1 style="margin-left: 5px">Antecipar Boleto</h1>
 
-    <label for="txtParcelas">Números de parcelas que deseja antecipar</label><br />
-
-    <input style="border: 2px solid #ccc;background-color: white;width: 60%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
+    <label style="margin-left: 5px" for="txtParcelas">Números de parcelas que deseja antecipar</label>
+    <input style="border: 2px solid #ccc;margin-left: 5px; background-color: white;width: 30%;padding: 8px 20px;margin: 8px 0;box-sizing: border-box"
            type="number" id="txtParcelas" name="txtParcelas" placeholder="Número de parcelas" /><br />
 
     <button style="width: 150px; margin:10px" class="button" type="submit">Gerar Boleto</button><br />
     <br />
 
-    <textarea>Boleto..</textarea><br />
+    <textarea style="margin-left: 5px; width:50%; height: 350px">Boleto..</textarea><br />
 
-    <button style="width: 150px; margin: 10px" class="button" type="submit">Imprimir Boleto</button><br />
+    <a href="Tela direcionada a função do boleto.html" style="width: 200px; margin: 10px" class="button" type="submit">Voltar</a>
+    <button style="width: 200px; margin: 10px" class="button" type="submit">Imprimir Boleto</button><br />
 
 </body>
 </html>
