--- a/Tela de ajuda.html
+++ b/Tela de ajuda.html
@@ -9,39 +9,37 @@
 <body>
 
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
-    <h1>Informações</h1>
+    <h1 style="margin-left: 25px">Informações</h1>
 
-    <p>
-        Nossa sistema de ajuda se baseia em suporte
-        online e saque de atendimento para qualque tipo
-        de problema e de acordo com a sua necessidade.
+    <p class="p" style="margin-left: 5px; color: black">
+        Nosso sistema de ajuda se baseia em um atendimento para qualquer tipo
+        de problema de acordo com sua necessidade.
     </p>
-    <p>Atendimento online das 9 ás 22h.</p>
+    <p class="p" style="margin-left: 5px; color: black">Atendimento online das 9 ás 22h.</p>
 
-    <button name="Chat online" style="font-weight: bold; width:200px; height:100px">CHAT ONLINE</button><br /><br />
+    <a href="#" class="button" name="Desativar Conta" style="width:200px;margin-left: 20px">Desativar Conta</a>
 
-    <button name="Desativar Conta" style="width:200px; height:40px">DESATIVAR CONTA</button>
+    <div class="p">
+        <p style="margin-left:1px;color: black" >E-mail para dúvidas ou problemas.<br />
+        DPfinaciamentos@hotmail.com
+    </div>
 
-    <p>E-mail para duvidas e problemas.</p>
-    <p>DPfinaciamentos@hotmail.com</p>
+    <div class="p">
+        <p style=" margin-left: 1px;color: black">Telefones para contato<br />
+            (11)4002-8922<br />
+            (11)4002-8923
+        </p>
+    </div>
 
-    <p>
-        Telefones para contato
-        Horario de atendimento das 9 ás 22h.
-    </p>
-    <p>(11)4002-8922</p>
-    <p>(11)4002-8923</p>
+    <a href="Tela do Usuário.html" class="button" name="Voltar" style="margin-left: 20px; width: 200px">Voltar</a>
 
-    <button name="Voltar" style="width:200px; height:40px">VOLTAR</button>
-    <!--Não editei nada so adicionei a linha abaixo-->
-    <a href="Tela do usuario.html">Voltar</a>
 
 
 
