--- a/Tela de boleto.html
+++ b/Tela de boleto.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Style.css"> <!-- Vai chamar o arquivo Style.css -->
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
-    <title>Tela boleto</title>
+    <title>DP Financiamentos</title>
 
 </head>
 
@@ -18,24 +18,17 @@
         <a href="Tela acompanhamento.html">Acompanhamento</a>
         <a href="#">Financiamento</a>
         <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="#">Ajuda</a> 
     </div>
 
-    <h1>Boleto</h1>
-
+    <h1 style="margin-left: 5px">Boleto</h1>
     <br />
-    <textarea style="width: 50%; height: 450px;"></textarea>
+    <textarea style="width: 40%; height: 350px;margin-left: 5px"></textarea>
     <br />
     <br />
 
-    <button style="width: 200px" class="button" type="submit">Imprimir boleto</button>
-    <button style="width: 200px" class="button" type="submit">Antecipar</button>
-    <button style="width: 200px" class="button" type="submit">Renegociação</button>
-    <!--Não editei nada so adicionei a linha abaixo-->
-    <a href="Tela antecipar boleto.html"></a>
-    <a href="Tela renegociação de boleto.html"></a>
-
-
+    <a href="Tela direcionada a função do boleto.html" style="width: 200px; margin-left:20px" class="button" type="submit">Voltar</a>
+    <button style="width: 200px; margin-left:20px" class="button" type="submit">Imprimir Boleto</button>
 
 </body>
 
