--- a/Tela de quitar financiamento.html
+++ b/Tela de quitar financiamento.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Financiamento</title>
+    <title>DP Financiamentos</title>
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
@@ -15,23 +15,20 @@
         <a href="#">Ajuda</a>
     </div>
 
-    <h1>Quitar Financiamento</h1>
+    <h1 style="margin-left: 5px">Quitar Financiamento</h1>
 
-    <p> Texto com informações mostrando o valor restante a se pagar no financiamento!...</p>
-    <!--aqui entrara os valores quando criar o código-->
-    <p>Mostrando também o deconto gerado em cima do valor restante do financiamento.</p>
-    <textarea></textarea>
-    <!--Aqui o desconto-->
-    <p>Termos e condições</p>
-    <!--Pensar em como por-->
-    <textarea style=" width: 40%; height: 78px;"></textarea><br />
+    <p style="margin-left: 5px"> Texto com informações mostrando o valor restante a se pagar no financiamento!...</p>
+    <p style="margin-left: 5px">Mostrando também o desconto gerado em cima do valor restante do financiamento.</p>
+    <textarea style="margin-left: 5px"></textarea>
+    <p style="margin-left: 5px">Termos e condições</p>
+    <textarea style=" width: 40%; height: 78px;margin-left:5px"></textarea><br />
+    <label style="margin-left: 5px;" for="checkbox">Aceito termos e condições</label>
+    <input style="width:460px; position: static" type="checkbox" id="Checkbox" name="Checkbox" required />
+    <br />
+    <br />
 
-    <input style="width:460px; width: 400px;" type="checkbox" id="Checkbox" name="Checkbox" required />
-    <label for="checkbox">Aceito termos e condições</label>
-
-
-    <button class="button" style="width: 200px" type="submit">Gerar boleto</button>
-    <button class="button" style="width: 200px" type="submit">Imprimir Boleto</button>
+    <button class="button" style="width: 200px; margin-left: 20px" type="submit">Gerar boleto</button>
+    <button class="button" style="width: 200px; margin-left: 20px" type="submit">Imprimir Boleto</button>
 
 </body>
 </html>
