--- a/Tela menu inicial.html
+++ b/Tela menu inicial.html
@@ -38,8 +38,8 @@
     <div class="p">
         <p>
             Nós da DP Finaciamentos trazemos em nossa plataforma algo que vai ajudar você,<br />
-            a realizar os seus sonhos. Diferente de tudo que você tenha visto, trazemos conosco<br /> 
-            a nova tecnologia blockchain onde suas transações estarão mais seguras do que nunca.<br /> 
+            a realizar os seus sonhos. Diferente de tudo que você tenha visto, trazemos conosco<br />
+            a nova tecnologia blockchain onde suas transações estarão mais seguras do que nunca.<br />
             Gostou? Então o que está esperando? Dp Financiamentos, venha e seja parte do futuro!<br />
         </p>
     </div>
@@ -49,17 +49,16 @@
     </div>
     <div class="p">
         <p>
-            Blockchain é um livro que registra as transações de moedas virtuais em uma rede
-            onde as informações<br /> 
-            são armazenadas em blocos sendo que cada bloco é carimbado com registros de data, 
-            tempo e localização.<br /> 
-            Para usar o blockchain você deve realizar uma transação e adicioná-la ao bloco, 
-            mas a tecnologia é tão<br />
-            segura que a transação solicitada só sera efetuada e concluída se a maioria dos
-            outros blocos definirem<br /> 
-            que a transação em questão é legítima, sendo assim uma transação de uma origem
-            desconhecida ou inválida<br />
-            é negada juntamente com a permissão de acesso das outras informações da cadeia de blocos que estão relacionados.<br />
+            Blockchain é um livro que registra as transações de moedas virtuais em uma rede<br />
+            onde as informações são armazenadas em blocos sendo que cada bloco é carimbado<br />
+            com registros de data, tempo e localização.<br />
+            <br />
+            Para usar o blockchain você deve realizar uma transação e adicioná-la ao bloco,<br />
+            mas a tecnologia é tão segura que a transação solicitada só sera efetuada e<br />
+            concluída se a maioria dos outros blocos definirem que a transação em questão é <br />
+            legítima, sendo assim uma transação de uma origem desconhecida ou inválida é<br />
+            negada juntamente com a permissão de acesso das outras informações da cadeia de<br />
+            blocos que estão relacionados.<br />
         </p>
 
     </div>
@@ -73,20 +72,19 @@
     <div class="b2" style="background-image: url('Images/WhatsApp Image 2020-10-18 at 19.14.35.jpeg'); border-radius: 15px;
 ">
         <br />
-        <br />
-        <br />
 
 
         <div class="row">
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        Nossa equipe trabalha para dar á você a<br /> 
-                        chance de realizar os seus sonhos, com os<br />
-                        menores juros do mercado, temos o orgulho de<br /> 
-                        mencionar que nós, a equipe da DP Financiamentos<br />  
-                        proporcionamos aos nossos clientes uma oportunidade<br />
-                        única de pertencer ao mundo dos negócios.<br /> 
+                        Nossa equipe trabalha para dar a você<br />
+                        chances de realizar os seus sonhos, com<br />
+                        os menores juros do mercado, temos o orgulho<br />
+                        de mencionar que nós, a equipe da DP <br />
+                        Financiamentos proporcionamos aos nossos<br />
+                        clientes uma oportunidade única de pertencer<br />
+                        ao mundo dos negócios.
                     </p>
                 </div>
             </div>
@@ -94,8 +92,8 @@
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        Já imaginou se tornando o mais novo<br /> 
-                        milionário? A DP Financiamentos vai<br /> 
+                        Já imaginou se tornando o mais novo<br />
+                        milionário? A DP Financiamentos vai<br />
                         te ajudar nessa! Basta se cadastrar e<br />
                         vir conhecer mais sobre nossa plataforma.<br />
                     </p>
@@ -105,12 +103,13 @@
             <div class="column">
                 <div class="p" style="color: white">
                     <p>
-                        Toda tecnologia á sua disposição, transações mais<br />
-                        seguras, sigilo de informações e uma versão do nosso <br />
-                        site para aplicativo Android, assim você poderá ter <br />
-                        acesso e ficar por dentro de tudo que acontece com o seu <br />
-                        dinheiro onde você estiver. Sem falar que nós temos um simulador <br />
-                        para você dar aquela conferida em nossa plataforma bem de perto.<br />
+                        Toda tecnologia á sua disposição, transações<br />
+                        mais seguras, sigilo de informações e uma versão<br />
+                        do nosso site para aplicativo Android, assim você<br />
+                        poderá ter acesso e ficar por dentro de tudo que <br />
+                        acontece com o seu dinheiro onde você estiver.<br />
+                        Sem falar que nós temos um simulador para você dar<br />
+                        aquela conferida em nossa plataforma bem de perto.<br />
                     </p>
                 </div>
             </div>
@@ -135,14 +134,12 @@
             e sem burocracia!<br /><br />
             Cadastre-se e tenha grandes possiblidades de<br />
             realizar seu sonho.<br />
-            <button class="button" type="submit">Cadastrar-se</button>
+            <a href="Tela de cadastro.html" class="button" type="submit">Cadastrar-se</></a>
         </p>
     </div>
     <br />
     <br />
     <br />
-
-
 
     <div class="footer">
         <br />
@@ -155,9 +152,9 @@
                 </div>
             </div>
             <div class="column">
-                <button class="button2" style="vertical-align:middle"><span>Home </span></button><br />
-                <button class="button2" style="vertical-align:middle"><span>Login</span></button><br />
-                <button class="button2" style="vertical-align:middle"><span>Cadastre-se</span></button>
+                <a href="Tela menu inicial.html" class="button2" style="vertical-align:middle"><span>Home</span></a><br />
+                <a href="Tela de login.html" class="button2" style="vertical-align:middle"><span>Login</span></a><br />
+                <a href="Tela de cadastro.html" class="button2" style="vertical-align:middle" ><span>Cadastre-se</span></a>
             </div>
 
             <div class="column">
