--- a/Tela renegociação de boleto.html
+++ b/Tela renegociação de boleto.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Renegociar Boleto</title>
+    <title>DP Financiamentos</title>
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
 
 </head>
@@ -16,23 +16,20 @@
         <a href="#">Ajuda</a>
     </div>
 
-    <h1>Renegociar Boleto</h1>
+    <h1 style="margin-left: 5px">Renegociar Boleto</h1>
 
 
-    <textarea>Texto Informativo</textarea> <br />
+    <textarea style="margin-left: 5px;height: 120px;width: 45%">Texto Informativo</textarea> <br />
     <br />
-    <textarea style="width: 40%; height: 150px;">Termos e Condições</textarea> <br />
+    <textarea style="width: 35%;margin-left: 5px; height: 100px;">Termos e Condições</textarea> <br />
+    <p style="font-size:20px; margin-left: 5px">Aceito<input style="width: 30px; margin-left: 5px" type="checkbox" name="condicao" value="Aceito" required /></p>
     <br />
-    <p style="font-size:20px">Aceito<input style="width: 30px" type="checkbox" name="condicao" value="Aceito" required /></p>
-    <br />
-    <button style="width: 150px" class="button" type="submit">Gerar boleto</button>
+    <button style="width: 150px; margin-left:20px" class="button" type="submit">Gerar boleto</button>
     <br />
     <br />
-
-    <textarea>Boleto..</textarea><br />
-    <button style="width: 150px" class="button" type="submit">Voltar</button>
-    <button style="width: 150px" class="button" type="submit">Imprimir boleto</button>
-    <!--Não editei nada so adicionei a linha abaixo-->
+    <textarea style="margin-left: 5px; width: 45%; height:300px" >Boleto..</textarea><br />
+    <a href="Tela direcionada a função do boleto.html" style="width: 150px;margin-left:20px" class="button" type="submit">Voltar</a>
+    <button style="width: 150px;margin-left:20px" class="button" type="submit">Imprimir boleto</button>
 
 </body>
 </html>
