--- a/Tela de cadastro.html
+++ b/Tela de cadastro.html
@@ -34,53 +34,53 @@
     <form id="formCadastro" runat="server">
 
 
-        <h1>Cadastro</h1>
+        <h1 style="margin-left: 5px">Cadastro</h1>
 
-        <label for="cadastro-nome">Nome</label>
-        <input type="text" name="cadastro-Nome" id="cadastro-Nome" required /><br />
+        <label style="margin-left: 5px" for="cadastro-nome">Nome</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Nome" id="cadastro-Nome" required /><br />
 
-        <label for="cadastro-sobrenome">Sobrenome</label>
-        <input type="text" name="cadastro-Sobrenome" id="cadastro-Sobrenome" required />
+        <label style="margin-left: 5px" for="cadastro-sobrenome">Sobrenome</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Sobrenome" id="cadastro-Sobrenome" required />
 
-        <label for="cadastro-dtn">Data de Nascimento</label>
-        <input type="date" name="cadastro-Dtn" id="cadastro-Dtn" required />
+        <label style="margin-left: 5px" for="cadastro-dtn">Data de Nascimento</label>
+        <input style="margin-left: 5px" type="date" name="cadastro-Dtn" id="cadastro-Dtn" required />
 
-        <label for="cadastro-CPF">CPF/CNPJ</label>
-        <input type="text" name="cadastro-CPF" id="cadastro-CPF" required />
+        <label style="margin-left: 5px" for="cadastro-CPF">CPF/CNPJ</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-CPF" id="cadastro-CPF" required />
 
-        <label for="cadastro-Email">Email</label>
-        <input type="Email" name="cadastro-Email" id="cadastro-Email" required />
+        <label style="margin-left: 5px" for="cadastro-Telefone">Telefone</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Telefone" id="cadastro-Telefone" required />
 
-        <label for="cadastro-Telefone">Telefone</label>
-        <input type="text" name="cadastro-Telefone" id="cadastro-Telefone" required />
+        <label style="margin-left: 5px" for="cadastro-Email">Email</label>
+        <input style="margin-left: 5px" type="Email" name="cadastro-Email" id="cadastro-Email" required />
 
-        <label for="cadastro-Password">Password</label>
-        <input type="password" name="cadastro-Password" id="cadastro-Password" required />
+        <label style="margin-left: 5px" for="cadastro-Password">Password</label>
+        <input style="margin-left: 5px" type="password" name="cadastro-Password" id="cadastro-Password" required />
 
-        <label for="cadastro-ConfirmaPassword">Password</label>
-        <input type="password" name="cadastro-ConfirmaPassword" id="cadastro-ConfirmaPassword" required />
+        <label style="margin-left: 5px" for="cadastro-ConfirmaPassword">Confirm Password</label>
+        <input style="margin-left: 5px" type="password" name="cadastro-ConfirmaPassword" id="cadastro-ConfirmaPassword" required />
 
-        <label for="cadastro-CEP">CEP</label>
-        <input type="text" name="cadastro-CEP" id="cadastro-CEP" required />
+        <label style="margin-left: 5px" for="cadastro-CEP">CEP</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-CEP" id="cadastro-CEP" required />
 
-        <label for="cadastro-Endereco">Endereço</label>
-        <input type="text" name="cadastro-Endereco" id="cadastro-Endereco" required />
+        <label style="margin-left: 5px" for="cadastro-Endereco">Endereço</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Endereco" id="cadastro-Endereco" required />
 
-        <label for="cadastro-Bairro">Bairro</label>
-        <input type="text" name="cadastro-Bairro" id="cadastro-Bairro" required />
+        <label style="margin-left: 5px" for="cadastro-Bairro">Bairro</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Bairro" id="cadastro-Bairro" required />
 
-        <label for="cadastro-Cidade">Cidade</label>
-        <input type="text" name="cadastro-Cidade" id="cadastro-Cidade" required />
+        <label style="margin-left: 5px" for="cadastro-Cidade">Cidade</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Cidade" id="cadastro-Cidade" required />
 
-        <label for="cadastro-UF">Estado</label>
-        <input type="text" name="cadastro-Estado" id="cadastro-Estado" required />
+        <label style="margin-left: 5px" for="cadastro-UF">Estado</label>
+        <input style="margin-left: 5px" type="text" name="cadastro-Estado" id="cadastro-Estado" required />
         <br />
         <br />
         <br />
-        
-        <button style="width: 190px" class="button" type="submit">Voltar</button>
-        <button style="width: 200px" class="button" type="submit">Confirmar</button>
-       
+
+        <a href="Tela menu inicial.html" style="width: 200px; margin-left: 20px" class="button" type="submit">Voltar</a>
+        <button style="width: 200px; margin-left: 20px" class="button" type="submit">Confirmar</button>
+
 
 
     </form>
