--- a/Tela de login.html
+++ b/Tela de login.html
@@ -26,32 +26,32 @@
         <br />
         <br />
         <br />
-        <h2 style="color: white"> Acessar Conta</h2>
+        <h2 style="color: white; margin-left:5px"> Acessar Conta</h2>
     </div>
     
 
-        <h1>Bem Vindo à DP Financiamentos</h1>
-        <h2>Faça seu login</h2>
+        <h1 style="margin-left:5px" >Bem Vindo à DP Financiamentos</h1>
+        <h2 style="margin-left:5px" >Faça seu login</h2>
 
         
         <form action="#" method="post">
 
-            <label for="login-email">Email</label>
-            <input type="email" id="login-email" required /><br />
+            <label style="margin-left:5px" for="login-email">Email</label>
+            <input style="margin-left:5px" type="email" id="login-email" required /><br />
 
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" required /><br />
+            <label style="margin-left:5px" for="login-password">Password</label>
+            <input style="margin-left:5px" type="password" id="login-password" required /><br />
             <br />
 
             <div  style="margin:20px" class="g-recaptcha"  data-sitekey="6LfrLM0ZAAAAAGy5FQ2F_ftPd4dv5j1UNUeTRfXz"></div>
 
-            <a href="#" style="color: black; text-decoration: none; font-size: 15px; margin: 90px">Esqueci minha senha</a>
+            <a href="Tela 2 metodo login.html" style="color: black; text-decoration: none; font-size: 15px; margin: 90px">Esqueci minha senha</a>
             <br />
             <br />
 
-            <button style="width: 150px" class="button" type="submit">Voltar</button>
+            <button style="width: 150px;margin-left:20px" class="button" type="submit">Voltar</button>
 
-            <button style="width: 150px" class="button" type="submit">Confirmar</button>
+            <a href="Tela do Usuário.html" style="width: 150px" class="button" type="submit">Confirmar</a>
 
             <br />
             <br />
