--- a/Tela direcionada a função do boleto.html
+++ b/Tela direcionada a função do boleto.html
@@ -2,39 +2,28 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="utf-8">
-    <title>Tela direcionada da função Boleto</title>
-
-    <!-- Vai chamar a o arquivo Style.css -->
-
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <title>DP Financiamentos</title>
     <link href="styles/telasPag.css" type="text/css" rel="stylesheet" />
-
 </head>
 
 <body>
-
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
-    <ul>
-        <li><a href="">Mensalidade</a></li>
-        <li><a href="">Antecipação</a></li>
-        <li><a href="">Renegociação</a></li>
-        <li><a href="">Quitar dívida</a></li>
-        <!--Não editei nada so adicionei a linha abaixo-->
-        <a href="Tela de boleto.html">Mensalidade</a>
-        <a href="Tela antecipar boleto.html">Antecipação</a>
-        <a href="Tela renegociação de boleto.html">Renegociação</a>
-        <a href="Tela de quitar financiamento.html">Quitar Divida</a>
+    <h1 style="margin-left: 5px">Boleto</h1>
 
-    </ul>
+            <a href="#">Mensalidade</a>
+            <a href="#">Antecipar Boleto</a>
+            <a href="#">Renegociação</a>
+            <a href="#">Quitarfinanciamento</a>
+    
+
     <br>
     <br>
     <br>
