--- a/Tela do Usuário.html
+++ b/Tela do Usuário.html
@@ -10,11 +10,11 @@
 
 
     <div class="menu">
-        <a href="#">Home</a>
+        <a href="Tela do Usuário.html">Home</a>
+        <a href="Tela de simulação.html">Simulação</a>
+        <a href="Tela Financiamento.html">Financiamento</a>
         <a href="Tela acompanhamento.html">Acompanhamento</a>
-        <a href="#">Financiamento</a>
-        <a href="#">Simulação</a>
-        <a href="#">Ajuda</a>
+        <a href="Tela de ajuda.html">Ajuda</a>
     </div>
 
     <div class="fundo" style="opacity: 1.0" >
